--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 * {
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
-  color: black;
   margin: 0;
   padding: 0;
 }
 
 p {
   font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 h1 {
